fix(dialogue-scss): makes link focus colour visible

--- a/client/scss/core/_dialog.scss
+++ b/client/scss/core/_dialog.scss
@@ -57,8 +57,11 @@
       text-align: center;
     }
 
-    a:hover {
-      color: $white;
+    a {
+      &:hover,
+      &:focus {
+        color: $white;
+      }
     }
 
     .info {
